force-app/main/default/objects/License__c/License__c.object-meta.xml
<CustomObject>
    <description>Object to capture License information for appraisers (one appraiser may have licenses for multiple states)</description>
    <label>License</label>
    <nameField>
        <label>License</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>