force-app/main/default/objects/License__c/fields/Action_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Deadline_Date__c</fullName>
    <label>Action Deadline Date</label>
    <type>Date</type>
</CustomField>