force-app/main/default/objects/License__c/fields/Appraiser_Key__c.field-meta.xml
<CustomField>
    <fullName>Appraiser_Key__c</fullName>
    <label>Appraiser Key</label>
    <length>6</length>
    <type>Text</type>
</CustomField>