force-app/main/default/objects/License__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <inlineHelpText>License creation date</inlineHelpText>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>