force-app/main/default/objects/License__c/fields/Imposed_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Imposed_Action_Date__c</fullName>
    <label>Imposed Action Date</label>
    <type>Date</type>
</CustomField>