force-app/main/default/objects/License__c/fields/License_ID__c.field-meta.xml
<CustomField>
    <fullName>License_ID__c</fullName>
    <externalId>true</externalId>
    <label>License ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>