force-app/main/default/objects/License__c/fields/License_State__c.field-meta.xml
<CustomField>
    <fullName>License_State__c</fullName>
    <label>License State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>