force-app/main/default/objects/License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>